# read-qrcode

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
read_qrcode/: __main__.py  read_qrcode.py  screenshot.py
src/: read-qrcode.py
