[project]
name = "read-qrcode"
version = "2.0.0"
description = "Read qr codes on the screen and retrieve its data"
authors = [
    {name = "jean0t",email = "joaomouryf@hotmail.com"}
]
license = {text = "GPL-3"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyautogui (>=0.9.54,<0.10.0)",
    "pyzbar (>=0.1.9,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
